Reconfigure project to use Java 8.